--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <section id="contact" class="contact">
         <h1 class="text-center">Contact Person</h1>
-        <img src="gambar/urang.jpg" alt="Profile Image" style="width: 300px;"> 
+        <img src="urang.jpg" alt="Profile Image" style="width: 300px;"> 
         <a href="https://www.instagram.com/aliefichwannuzul/" target="_blank">Instagram</a>
         <a href="https://youtu.be/YFp8MjrfshU?si=vLDfqNAaHkqC4q6C/" targer="_blank">Facebook</a>
         <a href="https://aliefichwannuzul.wordpress.com/" target=">_blank">Wordpress</a>
