--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     
     <section id="home">
         <div class="image-container">
-            <img src="gambar/contoh foto.jpg" alt="Image 1" style="width: 300px;">
-            <img src="gambar/masajik.jpg" alt="Image 2" style="width: 300px;">
-            <img src="gambar/langik.jpg" alt="Image 2" style="width: 300px;">
+            <img src="contoh foto.jpg" alt="Image 1" style="width: 300px;">
+            <img src="masajik.jpg" alt="Image 2" style="width: 300px;">
+            <img src="langik.jpg" alt="Image 2" style="width: 300px;">
         </div>
         
         <div class="container">
@@ -48,7 +48,7 @@
                 <div class="col">"Hello my name is Alief Ichwan Nuzul, As Specialist of Fotografi Astrophotography. Welcome to my world of professional photostyling and videography. I specialize in capturing the essence of every moment, creating timeless photos and dynamic videos. Whether it's a personal project, commercial shoot, or special event, I'm here to bring your vision to life with creativity and precision."</div>
             </div>
         </div>
-        <img src="gambar/contoh video.jpg" alt="profile img2">
+        <img src="contoh video.jpg" alt="profile img2">
     </section>
 
     <section id="contact" class="contact">
