--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </section>
     <footer>
         <div class="container text-center">
-            <p>&copy; 2024 Alief Ichwan Nuzul. Never Surended.</p>
+            <p><h4>&copy; 2024 Alief Ichwan Nuzul. Never Surended.</h4></p>
         </div>
     </footer>
 </body>
